--- a/src/register.html
+++ b/src/register.html
@@ -62,7 +62,7 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password"required>
                                     </div>
                                 </div>
-                                <button class="btn btn-primary btn-user btn-block">Register account</button>
+                                <button class="btn btn-google btn-user btn-block">Register account</button>
                                 <!--
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Register Account
